--- a/.gitignore
+++ b/.gitignore
@@ -11,10 +11,12 @@
 # Generated files
 bin/
 gen/
+libs/
 
 # Gradle files
 .gradle/
 build/
+/*/build/
 
 # Local configuration file (sdk path, etc)
 local.properties
@@ -24,3 +26,7 @@ proguard/
 
 # Log Files
 *.log
+.settings/
+.metadata/
+build.xml
+.classpath
